force-app/main/default/objects/Consent_Record__c/Consent_Record__c.object-meta.xml
<CustomObject>
    <label>Consent Record</label><pluralLabel>Consent Records</pluralLabel>
    <nameField><label>Consent Name</label><type>AutoNumber</type><displayFormat>CON-{00000}</displayFormat></nameField>
<sharingModel>ControlledByParent</sharingModel>
</CustomObject>