force-app/main/default/objects/Consent_Record__c/fields/Consent_Channel__c.field-meta.xml
<CustomField>
    <fullName>Consent_Channel__c</fullName><label>Consent Channel</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Portal</fullName><default>false</default><label>Portal</label></value>
        <value><fullName>PSR</fullName><default>false</default><label>PSR</label></value>
        <value><fullName>Paper</fullName><default>false</default><label>Paper</label></value>
        <value><fullName>eSignature</fullName><default>false</default><label>eSignature</label></value>
    </valueSetDefinition></valueSet>
</CustomField>