force-app/main/default/objects/Consent_Record__c/fields/Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>Consent_Status__c</fullName><label>Consent Status</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
        <value><fullName>Granted</fullName><default>false</default><label>Granted</label></value>
        <value><fullName>Withdrawn</fullName><default>false</default><label>Withdrawn</label></value>
        <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
    </valueSetDefinition></valueSet>
</CustomField>