force-app/main/default/objects/Consent_Record__c/fields/Consent_Type__c.field-meta.xml
<CustomField>
    <fullName>Consent_Type__c</fullName><label>Consent Type</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Program Participation</fullName><default>false</default><label>Program Participation</label></value>
        <value><fullName>HIPAA Authorization</fullName><default>false</default><label>HIPAA Authorization</label></value>
        <value><fullName>Data Sharing</fullName><default>false</default><label>Data Sharing</label></value>
        <value><fullName>Marketing Communications</fullName><default>false</default><label>Marketing Communications</label></value>
        <value><fullName>Research</fullName><default>false</default><label>Research</label></value>
    </valueSetDefinition></valueSet>
</CustomField>