force-app/main/default/objects/Consent_Record__c/fields/Enrollee__c.field-meta.xml
<CustomField>
    <fullName>Enrollee__c</fullName><label>Enrollee</label><type>Lookup</type>
    <referenceTo>CareProgramEnrollee</referenceTo>
    <relationshipLabel>Consent Records</relationshipLabel>
    <relationshipName>Consent_Records</relationshipName><required>true</required>
</CustomField>