force-app/main/default/objects/Consent_Record__c/fields/Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Date__c</fullName><label>Signed Date</label><type>DateTime</type>
</CustomField>