force-app/main/default/objects/Consent_Record__c/fields/Withdrawal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Reason__c</fullName><label>Withdrawal Reason</label><type>TextArea</type>
</CustomField>